--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
 <body>
   <div id="player" class="video-player">
     <div class="js-video-container video-container"></div>
-    <div class="wrapper">
+    <div class="video-wrapper">
 
-      <button class="js-play-button button">
+      <button class="js-play-button video-button">
         <i class="fa fa-play" aria-hidden="true"></i>
       </button>
 
-      <button class="js-pause-button button pause-button">
+      <button class="js-pause-button video-button">
         <i class="fa fa-pause"></i>
       </button>
 
-      <button class="js-volume-button button">
+      <button class="js-volume-button video-button">
         <i class="fa fa-volume-off" aria-hidden="true"></i>
       </button>
 
-      <button class="js-mute-button button">
+      <button class="js-mute-button video-button">
         <i class="fa fa-volume-up" aria-hidden="true"></i>
       </button>
 
-      <div class="spacer"></div>
+      <div class="video-spacer"></div>
 
-       <button class="js-fullscreen-button button">
+       <button class="js-fullscreen-button video-button">
          <i class="fa fa-expand" aria-hidden="true"></i>
        </button>
 
