--- a/index.html
+++ b/index.html
@@ -28,7 +28,19 @@
         <i class="fa fa-volume-up" aria-hidden="true"></i>
       </button>
 
-      <div class="video-spacer"></div>
+      <div class="player-time">
+        <span class="js-current-time">00:00</span>
+      </div>
+
+      <div class="progress-container">
+        <div class="js-progress">
+          <div class="js-progress-slider"></div>
+        </div>
+      </div>
+
+      <div class="player-time">
+        <span class="js-duration">00:00</span>
+      </div>
 
        <button class="js-fullscreen-button video-button">
          <i class="fa fa-expand" aria-hidden="true"></i>
