--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
   <link rel="icon" type="image/png" href="img/favicon.png">
   <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -51,7 +51,7 @@
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://unpkg.com/playable@2.10.3/dist/statics/playable.bundle.min.js"></script>
   <script src="player.js"></script>
-  <script type="text/javascript">
+  <script>
     createPlayer({elementId: 'player'});
   </script>
 </body>
